[package]
name = "yew-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
gloo = "0.6"
stylist = { version="0.10", features = ["yew_integration"] }

[profile.release]
opt-level = 'z'
lto = true
debug = false
codegen-units = 1
panic = "abort"

